--- a/testf.html
+++ b/testf.html
@@ -6,6 +6,69 @@
     <title>testf</title>
 </head>
 <body>
-    
+    <h1>h1</h1>
+    <h2>h2</h2>
+    <h3>h3</h3>
+    <h4>h4</h4>
+    <p>p标签 段落</p>
+    <img src="https://img.alicdn.com/tfs/TB1MaLKRXXXXXaWXFXXXXXXXXXX-480-260.png" alt=""> 
+    <a href="https://www.baidu.com/" target="_blank">百度</a>
+    <!-- 无序列表 -->
+    <ul>
+        <li>
+            <h1>lih1</h1>
+            <p>lip</p>
+        </li>
+        <li>li</li>
+        <li>li/li>
+        <li>li</li>
+    </ul>
+    <!-- 有序列表 -->
+    <ol>
+        <li>1</li>
+        <li>2</li>
+    </ol>
+    <div>常用于布局</div>
+    <span></span>
+    <span></span>
+    <!-- 
+        行级元素 a span label strong b
+        块级元素(自己占一行，可以设置宽高) h1 p ul il ol div table
+        行级块元素 img
+     -->
+     <!-- 表格 -->
+    <table>
+        <tr>
+            <td>第1行第1列</td>
+            <td>第1行第2列</td>
+        </tr>
+        <tr>
+            <td>第2行第1列</td>
+            <td>第2行第2列</td>
+        </tr>
+    </table>
+    <form>
+    <label for="aa">账号</label><input id="aa" type="text">
+    <br/>
+    <span>密码</span><input type="password">
+    <!-- 单选框 -->
+    <br/>
+    <input type="radio" name="sex">boy
+    <input type="radio" name="sex">girl
+    <br/>
+    <!-- 复选框 -->
+    <input type="checkbox" name="hobby">game
+    <input type="checkbox" name="hobby">football
+    <select>
+        <option value="">下拉框1</option>
+        <option value="">下拉框2</option>
+        <option value="">下拉框3</option>
+    </select>
+    <textarea name="" id="" cols="30" rows="10">
+        文本域字多
+    </textarea>
+    <button>按钮</button>
+    <input type="submit" value="提交表单">
+    </form>
 </body>
 </html>
